# FreeGameEngine

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
game/client/: CMakeLists.txt
game/client/doc/: 岳飞手机版战斗规则.docx  战斗.docx  技能相关公式.xlsx
game/client/proj.android/: .gitignore  .project  AndroidManifest.xml  build_android.bat  copy_res.bat  paths.xml
game/client/proj.ios/: .gitignore
game/client/proj.win32/: game.rc  resource.h  yuefei.vcxproj
game/client/src/: application.cpp  application.h
src/: CMakeLists.txt  freegame.h
src/core/: Application.cpp  Application.h  CMakeLists.txt  aabbcollider.cpp  aabbcollider.h  aabbrigid.cpp  aabbrigid.h  aabbtree.cpp  aabbtree.h  action.cpp  action.h  action_alpha.cpp  action_alpha.h  action_container.cpp  action_container.h  action_motion.cpp  action_motion.h  action_self_destruction.cpp  action_self_destruction.h  attachment_line.cpp  attachment_line.h  billboard.cpp  billboard.h  camera.cpp  camera.h  check_align.cpp  core.cpp  core.h  engine.cpp  engine.h  font_node.cpp  font_node.h  gizmo.cpp  gizmo.h  ground_node.cpp  ground_node.h  main_def.h  mesh_node.cpp  mesh_node.h  progress_bar.cpp  (+8 more)
src/graphics/: CMakeLists.txt  aabb.cpp  aabb.h  base.cpp  base.h  base_res_mgr.cpp  base_res_mgr.h  color.cpp  color.h  compressed_texture.cpp  compressed_texture.h  effect.cpp  effect.h  effect_auto_const_imp.cpp  effect_auto_const_imp.h  effect_constant.cpp  effect_constant.h  effect_mgr.cpp  effect_mgr.h  graphics.h  light_container.cpp  light_container.h  light_dir.cpp  light_dir.h  material.cpp  material.h  mesh.cpp  mesh.h  mesh_mgr.cpp  mesh_mgr.h  mesh_structs.h  mesh_tool.cpp  mesh_tool.h  pre_def.h  projection.cpp  projection.h  render_block.cpp  render_block.h  render_config.cpp  render_config.h  (+29 more)
src/math/: CMakeLists.txt  _math.hpp  math.hpp  math_def.h  matrix.cpp  matrix.hpp  matrix.ipp  quat.ipp  vector2.ipp  vector3.ipp  vector4.hpp  vector4.ipp
src/platform/: CMakeLists.txt  platform.h
src/platform/android/: file_tool_imp.cpp
src/platform/ios/: file_tool_imp.mm
src/platform/unix/: file_tool_imp.cpp  (+1 more)
src/script/: .gitignore  CMakeLists.txt  collision.cpp  collision.h  entity.cpp  entity.h  helper.cpp  helper.h  input_mgr.cpp  input_mgr.h  lua_gui.cpp  lua_gui.h  lua_gui_delegate.h  lua_vector.cpp  root_scene.cpp  root_scene.h  script.cpp  script.h  tolua_converter.cpp  tolua_converter.h  tolua_converter.inl
src/util/: CMakeLists.txt  assert_tool.cpp  assert_tool.h  data_stream.cpp  data_stream.h  event_def.h  event_dispatch.cpp  event_dispatch.h  event_listener.cpp  event_listener.h  file_imp.cpp  file_imp.h  file_tool.cpp  file_tool.h  json_rapidjson.cpp  json_rapidjson.h  keycodes.cpp  keycodes.h  list_proxy.h  log_file.cpp  log_file.h  log_tool.cpp  log_tool.h  logic_timer.cpp  logic_timer.h  object.cpp  object.h  object_linker.cpp  object_linker.h  priority_queue.h  quick_file_reader.cpp  quick_file_reader.h  quick_file_writer.hpp  random.cpp  random.h  section.cpp  section.h  section_factory.cpp  section_factory.h  simple_stream.cpp  (+21 more)
(+213 files in other folders)
